src/elements/snapshots/panoramix__elements__checkbox__tests__checkbox_widget-2.snap
---
source: src/elements/checkbox.rs
expression: checkbox_state_2

---
RootWidget(
    Column(
        IdentityWrapper(
            Checkbox(
                "[X] Hello",
            ),
        ),
    ),
)
