src/elements/snapshots/panoramix__elements__checkbox__tests__checkbox_widget.snap
---
source: src/elements/checkbox.rs
expression: checkbox_state

---
RootWidget(
    Scroll(
        ClipBox(
            Column(
                IdentityWrapper(
                    Checkbox(
                        "[_] Hello",
                    ),
                ),
            ),
        ),
    ),
)
