src/elements/snapshots/panoramix__elements__checkbox__tests__new_checkbox-2.snap
---
source: src/elements/checkbox.rs
expression: checkbox_data

---
CheckboxData {
    text: "Hello",
    value: false,
    flex: FlexParams {
        flex: None,
        alignment: None,
    },
    reserved_widget_id: None,
}
