src/elements/snapshots/panoramix__elements__checkbox__tests__new_checkbox.snap
---
source: src/elements/checkbox.rs
expression: checkbox

---
Checkbox {
    text: "Hello",
    value: false,
    flex: FlexParams {
        flex: None,
        alignment: None,
    },
    reserved_widget_id: None,
}
